# faiss_vector_search_mysql

./: bm25_index.pkl  config.py  corpus_ids.pkl  faissManager.py  main.py  pyproject.toml  simulate_sql.py
app/: bm25_index.pkl  config.py  dependencies.py  main.py
app/bm25/: bm25_manager.py
app/config/: config.py
app/db/: database_connector.py  simulate_sql.py
app/faiss/: faissManager.py
app/filters/: filter_handler.py
app/utils/: bm25_manager.py  database_connector.py  faissManager.py  simulate_sql.py
indexes/: itens.index
src/: config.py  main.py
src/db/: simulate_sql.py
src/faiss/: faissManager.py
