[project]
name = "faiss-mysql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.12",
    "sentence-transformers>=4.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
