[project]
name = "faiss-mysql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.11.0",
    "fastapi[standard]>=0.115.12",
    "hf-xet>=1.1.2",
    "mysql-connector-python>=9.3.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=4.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
